# shadow-apk-gateway

./: .gitignore  Dockerfile  LICENSE  README.md  apk_gateway_engineering_s.Markdown  docker-compose.static.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/analyzer/: __init__.py
apps/analyzer/frida_scripts/: okhttp3.js  retrofit.js  tls_keylog.js  urlconnection.js  webview.js
apps/analyzer/src/: __init__.py  capture.py  emulator.py  explorer.py  frida_runner.py  har_export.py  trace_store.py
apps/extractor/: __init__.py
apps/extractor/fixtures/manifest_sample/: AndroidManifest.xml
apps/extractor/src/: __init__.py  cli.py  ingest.py
apps/extractor/src/parsers/: __init__.py  deeplink.py  jsasset.py  okhttp.py  retrofit.py  webview.py
apps/extractor/tests/: test_okhttp_parser.py  test_retrofit_parser.py
apps/gateway/: __init__.py
apps/gateway/src/: __init__.py  audit.py  auth.py  executor.py  main.py  orchestrator.py  rate_limit.py  review_cli.py  session.py
docs/: Shadow-APK-Gateway_ Code Audit & Fixes.md
examples/quickstart/: README.md  catalog.json
infra/frida/: server_download.sh
tests/: conftest.py  test_capture.py  test_e2e_pipeline.py  test_gateway.py  test_gateway_main.py  test_har.py  test_inference.py  test_merger.py  test_okhttp.py  test_openapi.py  test_quickstart_example.py  test_replayer.py  test_retrofit.py  test_review_cli_export.py  test_scorer.py  test_session_security.py
tests/fixtures/apk/synthetic_apk/: AndroidManifest.xml  apktool.yml
tests/fixtures/smali/: OkHttpSample.smali  RetrofitSample.smali
(+5 files in other folders)
